main.css
* {
    margin: 0;
    padding: 0;
    border: 0;
    list-style: none;
    outline: none;
}
html, body {
    height: 100%;
}
body {
    font-family: 'Segoe UI', Tahoma, sans-serif;
    font-size: 14px;
    color: #303030;
    -webkit-text-size-adjust: 100%;
}
a {
    text-decoration: none;
    color: black;
}
a:hover {
}
.clear-both {
    clear: both;
}

#main-wrapper {
    min-width: 800px;
    /* temporary */
    padding-top: 50px;
}
#options {
    position: absolute;
    display: block;

    width: 24px;
    height: 24px;

    right: 15px;
    top: 15px;

    background-image: url('../images/options.svg');
    background-repeat: no-repeat;
}
#options-window {
    display: none;
    position: fixed;

    margin: auto;
    left: 0;
    right: 0;
    top: 15px;

    width: 60%;
    min-width: 800px;

    padding: 10px;

    border: 2px dashed silver;
    border-radius: 6px;
    background-color: rgba(255, 255, 255, 0.90);
}
    #options-window .title {
        text-align: center;
        font-weight: bold;
    }
    #options-window input[type="checkbox"] {
        vertical-align: middle;
    }
    #options-window .range {
        line-height: 21px;
        margin-bottom: 2px;
    }
    #options-window .range input[type="range"] {
        float: left;
        width: 80px;

        margin-right: 10px;
    }
    #options-window .range .amount {
        float: left;

        width: 20px;
        margin-right: 10px;

        text-align: center;
        font-weight: bold;
    }
#bookmarks {
    display: none;
    width: 50%;

    margin: auto;

    margin-bottom: 25px;
}
    #bookmarks .title {
        text-align: center;
        font-weight: bold;
    }
#top-pages {
    display: none;
    width: 50%;

    margin: auto;
    margin-bottom: 50px;
}
    #top-pages .top-pages-wrapper {
    }
    #top-pages .title {
        padding: 0 0 5px 0;

        font-weight: bold;
        text-align: center;
    }
    #top-pages .site {
        display: inline-block;

        width: 180px;
        height: 20px;

        margin: 0 0 5px 0;
    }
    #top-pages .site img {
        float: left;
        margin: 3px 5px 0 0;
    }
    #top-pages a {
        color: #585858;
    }
    #top-pages a:hover {
        color: black;
    }
#apps {
    display: none;
    width: 55%;

    margin: auto;
    margin-bottom: 50px;
}
    #apps .apps-wrapper {
        min-height: 330px;
        max-height: 500px;
        overflow-y: auto;
    }
    #apps .title {
        padding: 0 0 5px 0;

        font-weight: bold;
        text-align: center;
    }
    #apps .app {
        display: inline-block;

        width: 155px;
        height: 155px;

        margin-bottom: 10px;

        text-align: center;
    }
    #apps .app .wrapper {
        position: relative;

        width: 134px;
        height: 150px;

        margin: auto;
        top: 0;
        -webkit-transition: all 0.25s;
    }
    #apps .app .wrapper:hover {
        cursor: pointer;

        height: 155px;
        top: -5px;
    }
    #apps .app img {
        display: block;
        margin: auto;

        width: 128px;
        height: 128px;
    }
    #apps .app.disabled img {
        opacity: 0.75;
        -webkit-filter: grayscale(1.0);
    }
#recently-closed-pages {
    display: none;
    width: 50%;
    margin: auto;
}
    #recently-closed-pages .title {
        padding: 0 0 5px 0;

        font-weight: bold;
        text-align: center;
    }
    #recently-closed-pages .closed-site {
        display: inline-block;

        width: 180px;
        height: 20px;

        margin: 0 0 5px 0;
    }
    #recently-closed-pages .closed-site img {
        float: left;
        margin: 3px 5px 0 0;
    }
    #recently-closed-pages a {
        color: #585858;
    }
    #recently-closed-pages a:hover {
        color: black;
    }

